add footer and tap icon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ترجمة السغة لمون</title>
     <link rel="stylesheet" href="styles/mainStyle.css">
+    <link rel="shortcut icon" href="assets/ahmed.jpg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 </head>
 <body>
@@ -44,6 +45,13 @@
             </div>
         </div>
     </main>
+
+    <footer class="p-2 text-light bg-secondary text-center">
+        <div>
+            <p>&copy 2020 - <a class="badge badge-light" target="_blank" href="https://www.facebook.com/hossam.sherif.28">Hossam Sherif</a></p>
+        </div>
+    </footer>
+
 
 
     
