Add new feature and fix a bug
-fix new line bug
-add show "click to copy text" when hover

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         </div>
                         <div class="d-inline-block mt-5" style="position: relative;">
                             <small id="trans2" class="text-muted">العربية</small>
-                            <div id="buttonToCopy">
+                            <div data-toggle="tooltip" data-placement="top" title="Click To Copy Text" id="buttonToCopy">
                                 <textarea id="textarea2" disabled placeholder="Translation" cols="70" rows="5" class="form-control mt-1"></textarea>
                             </div>
                             <small id="copyText" class="font-weight-bold getPositionForCopy text-success d-none">Text copied successfully!</small>
